tools/prom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: devops-tools
  labels:
    app: prometheus
spec:
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
    spec:
      containers:
      - name: 'prometheus'
        image: 'prom/prometheus:v2.26.0'
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: devops-tools
  labels:
    app: prometheus
spec:
  selector: 
    name: prometheus
  ports:
  - port: 9090
    targetPort: 9090
