tools/ingress-garfana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafanaservice
            port:
              number: 3000
